Use cocoon gateway object in forms transformer Enhance proxy transformer Improved settings Reset exception if xconf is wrong
git-svn-id: https://svn.apache.org/repos/asf/cocoon/trunk@151721 13f79535-47bb-0310-9956-ffa450edef68